--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <section id="Estudios">
         <h2>Estudios</h2>
         <article>
-   
+  
             <div class="container-fluid py-5">
                 <div class="row">
                   <div class="col-lg-12">              
@@ -222,10 +222,10 @@
                       <a href="#" class="timeline">
                           <div class="timeline-icon"><i class="fa fa-globe"></i></div>
                           <div class="timeline-content">
-                              <h3 class="title">Web Designer [2018 - 2019]</h3>
+                              <h3 class="title">Junior Developer [2018 - 2019]</h3>
                               <p class="description">
                                   <strong>Empresa (WayPro).</strong><br>
-                                  Práctica post egreso de TNS Analista Programador y primer trabajo formal en el area de Informática, formé mis bases en C#, en el backend, javascript en el frontend y SQL SERVER en base de datos.
+                                  Práctica post egreso de TNS Analista Programador y primer trabajo formal en el area de Informática, formé mis bases en C# en el backend, javascript en el frontend y SQL SERVER en base de datos.
                               </p>
                           </div>
                       </a>
@@ -234,16 +234,18 @@
                           <div class="timeline-content">
                               <h3 class="title">Web Developer [2019 - 2020]</h3>
                               <p class="description">
-                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                  <strong>Empresa (Tecnolex).</strong><br>
+                                  Empresa de ciberseguridad enfocada en el area legal, profundicé mis aprendizajes en .NET y logré aprender sobre las aplicaciones web y las API, trabajé dandole mantencion y agregando funcionalidades al sitio www.script.legal.
                               </p>
                           </div>
                       </a>
                       <a href="#" class="timeline">
                           <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
                           <div class="timeline-content">
-                              <h3 class="title">Web Designer [2021 - 2022]</h3>
+                              <h3 class="title">Web Developer Full Stack [2021 - Today]</h3>
                               <p class="description">
-                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate ducimus officiis quod! Aperiam eveniet nam nostrum odit quasi ullam voluptatum.
+                                  <strong>Empresa (Inversiones y Asesorias de Programas SpA).</strong><br>
+                                  Mantenimiento y desarrollo del sitio www.script.legal, un sitio de contratos automatizados en .NET, logré profundizar en integraciones API, y aprender un poco sobre servidores.
                               </p>
                           </div>
                       </a>
